fix(scrollbars): no scrollbars anymore + adaptative card size for tablets

--- a/app/front_assets/stylesheets/components/search.scss
+++ b/app/front_assets/stylesheets/components/search.scss
@@ -35,8 +35,6 @@
 }
 
 .results-container {
-  overflow: scroll;
-
   .results-col {
     width: calc((100% / 7) + 600px - 30px) !important;
     top: 56px;
